--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - HTML</title>
+  <title>김재령의 첫 사이트</title>
   <meta charset="utf-8">
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGJ1JC6TTW"></script>
@@ -16,14 +16,14 @@
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">인사</a></li>
+    <li><a href="2.html">독후감</a></li>
+    <li><a href="3.html">물리치료</a></li>
   </ol>
-  <h2>HTML</h2>
-  <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 speicification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
+  <h2>안녕하세요.</h2>
+  <p><a href="https://kjj950299.tistory.com/category/%EC%A7%80%EC%8B%9D%EC%8C%93%EA%B8%B0" target="_blank" title="html5 speicification">. 이 링크는 제가 공부하면서 정리한 블로그입니다. 생활코딩으로 열심히 사이트를 만들어봤습니다</a> <strong> 여러분들도 사이트를 만들어봐요!!creating <u>web</u> pages</strong>
   <img src="https://elkorean.kr/data/file/boder_memo/1893317627_iwzKh2BM_e75de13a5a9085d50e6f0b025b6d5bd2bc72ce3a.JPG" width="100%">
-  </p><p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.
+  </p><p style="margin-top:45px;">처음 시작할때만 해도 막막했는데, 4시간동안 낑낑대면서 만들고 나니까 앞으로 좀만 더 공부하면 더 잘 만들 수 있을거 같은 느낌입니다.
   </p>
   <p><iframe width="560" height="315" src="https://www.youtube.com/embed/K3cYoZ9AFOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
