--- a/2.html
+++ b/2.html
@@ -1,20 +1,20 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - HTML</title>
+  <title>독후감 보러 놀러오세요</title>
   <meta charset="utf-8">
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">인사</a></li>
+    <li><a href="2.html">독후감</a></li>
+    <li><a href="3.html">물리치료 공부</a></li>
   </ol>
   <h2>HTML</h2>
-  <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 speicification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
-  <img src="coding.jpg" width="100%">
-  </p><p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.
+  <p><a href="https://kjj950299.tistory.com/category/%EB%8F%85%ED%9B%84%EA%B0%90" target="_blank" title="html5 speicification"> 취미로 쓰고 있는 독후감 (HTML)</a>
+  <img src="https://w.namu.la/s/5aed1de3e76dd5a0fa9185a3523182ecd66873d77fb7261c9cea9398eac1af1423a74a3557dd4679fffa6ca0e16c604c576489cd3b37b9db5a6adcaa65341cb0fefd5481ac0b1659266b99c32f121d610729be447d792aafb27eb0d4475eb27c" width="100%">
+  </p><p style="margin-top:45px;">일주일에 한번씩 책읽고 독후감 올리는 곳입니다. 열심히 책을 읽으려고 블로그 운영하고 있어요! 
   </p>
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
