--- a/1.html
+++ b/1.html
@@ -18,12 +18,12 @@
   <ol>
     <li><a href="1.html">인사</a></li>
     <li><a href="2.html">독후감</a></li>
-    <li><a href="3.html">물리치료</a></li>
+    <li><a href="3.html">물리치료 공부하기</a></li>
   </ol>
   <h2>안녕하세요.</h2>
-  <p><a href="https://kjj950299.tistory.com/category/%EC%A7%80%EC%8B%9D%EC%8C%93%EA%B8%B0" target="_blank" title="html5 speicification">. 이 링크는 제가 공부하면서 정리한 블로그입니다. 생활코딩으로 열심히 사이트를 만들어봤습니다</a> <strong> 여러분들도 사이트를 만들어봐요!!creating <u>web</u> pages</strong>
+  <p><a href="https://kjj950299.tistory.com/category/%EC%A7%80%EC%8B%9D%EC%8C%93%EA%B8%B0" target="_blank" title="html5 speicification">김재령의 블로그</a> <strong> 이 링크는 제 블로그입니다. 제 블로그도 놀러오세요! </strong>
   <img src="https://elkorean.kr/data/file/boder_memo/1893317627_iwzKh2BM_e75de13a5a9085d50e6f0b025b6d5bd2bc72ce3a.JPG" width="100%">
-  </p><p style="margin-top:45px;">처음 시작할때만 해도 막막했는데, 4시간동안 낑낑대면서 만들고 나니까 앞으로 좀만 더 공부하면 더 잘 만들 수 있을거 같은 느낌입니다.
+  </p><p style="margin-top:45px;">처음 시작할때만 해도 막막했는데, 4시간동안 낑낑대면서 만들고 나니까 앞으로 좀만 더 공부하면 더 잘 만들 수 있을거 같은 느낌입니다. <strong>오신김에 댓글이랑 채팅도 한번씩 사용해주세요!</strong>
   </p>
   <p><iframe width="560" height="315" src="https://www.youtube.com/embed/K3cYoZ9AFOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
