--- a/3.html
+++ b/3.html
@@ -1,19 +1,21 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - JavaScript</title>
+  <title>물리치료 공부하러 가자</title>
   <meta charset="utf-8">
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">인사</a></li>
+    <li><a href="2.html">독후감</a></li>
+    <li><a href="3.html"></a></li>
   </ol>
-  <h2>JavaScript</h2>
-  <p>
-    JavaScript (/ˈdʒɑːvəˌskrɪpt/[6]), often abbreviated as JS, is a high-level, dynamic, weakly typed, prototype-based, multi-paradigm, and interpreted programming language. Alongside HTML and CSS, JavaScript is one of the three core technologies of World Wide Web content production. It is used to make webpages interactive and provide online programs, including video games. The majority of websites employ it, and all modern web browsers support it without the need for plug-ins by means of a built-in JavaScript engine. Each of the many JavaScript engines represent a different implementation of JavaScript, all based on the ECMAScript specification, with some engines not supporting the spec fully, and with many engines supporting additional features beyond ECMA.
+  <h2>물리치료 공부</h2>
+  <a href="https://kjj950299.tistory.com/category/%EB%AC%BC%EB%A6%AC%EC%B9%98%EB%A3%8C%20%EC%A0%84%EA%B3%B5%EA%B3%B5%EB%B6%80" target="_blank" title="html5 speicification">(링크)물리치료 공부</a>
+   <img src="https://post-phinf.pstatic.net/MjAxOTA5MjNfNjYg/MDAxNTY5MjIxMDUyMTg2.nz6xJGFCsWlnNOds_-A4obrRxqs2e0XfBRB0QI5pub4g.xclU3B82TcnUOL1gGCqucgWQ0BU-GwLcBBF4b4roNhwg.JPEG/IvM-80S6O-zpLMCnKu99J1GOPR_o.jpg?type=w400" width="100%">
   </p>
+  <p>
+    다들 물리치료 공부하러 들어오세요!
 </body>
 </html>
