--- a/3.html
+++ b/3.html
@@ -9,7 +9,7 @@
   <ol>
     <li><a href="1.html">인사</a></li>
     <li><a href="2.html">독후감</a></li>
-    <li><a href="3.html"></a></li>
+    <li><a href="3.html">물리치료 공부</a></li>
   </ol>
   <h2>물리치료 공부</h2>
   <a href="https://kjj950299.tistory.com/category/%EB%AC%BC%EB%A6%AC%EC%B9%98%EB%A3%8C%20%EC%A0%84%EA%B3%B5%EA%B3%B5%EB%B6%80" target="_blank" title="html5 speicification">(링크)물리치료 공부</a>
