--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <li><a href="2.html">독후감</a></li>
     <li><a href="3.html">물리치료 공부</a></li>
   </ol>
-  <p><h2>세상을 바꾸는 중입니다......</h2>
+  <p><h2>세상을 바꾸는 중입니다........</h2>
   </p>
 </body>
 </html>
