--- a/2.html
+++ b/2.html
@@ -13,16 +13,43 @@
   
  <!-- 마커 -->
 <div id="map" style="width:100%;height:400px;"></div>
+<script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=pj5rb"></script>
+<div id="map" style="width:100%;height:450px;"></div>
 <script>
-  var map = new naver.maps.Map('map', {
-    center: new naver.maps.LatLng(35.17982543369992, 129.07499499992576),
-    zoom: 17
-  });
 
-  var marker = new naver.maps.Marker({
-    position: new naver.maps.LatLng(35.17982543369992, 129.07499499992576),
-    map: map
-  });
+var HOME_PATH = window.HOME_PATH || '.';
+var cityhall = new naver.maps.LatLng(37.690, 126.655),
+    map = new naver.maps.Map('map', {
+        center: cityhall.destinationPoint(0, 500),
+        zoom: 18
+    }),
+    marker = new naver.maps.Marker({
+        map: map,
+        position: cityhall
+    });
+
+var contentString = [
+        '<div class="iw_inner">',
+        '   <h3>　회사명</h3>',
+        '   <p>　주소　<br />',
+        '    　전화번호 <br />',
+	    '</div>'
+					
+    ].join('');
+
+var infowindow = new naver.maps.InfoWindow({
+    content: contentString
+});
+
+naver.maps.Event.addListener(marker, "click", function(e) {
+    if (infowindow.getMap()) {
+        infowindow.close();
+    } else {
+        infowindow.open(map, marker);
+    }
+});
+
+infowindow.open(map, marker);
 </script>
   
   
