--- a/2.html
+++ b/2.html
@@ -30,9 +30,9 @@ var cityhall = new naver.maps.LatLng(37.690, 126.655),
 
 var contentString = [
         '<div class="iw_inner">',
-        '   <h3>　회사명</h3>',
-        '   <p>　주소　<br />',
-        '    　전화번호 <br />',
+        '   <h3>　박재현재활운동센터 고양점</h3>',
+        '   <p>　경기 고양시 덕양구 화신로 263 브릿지타워 6층　<br />',
+        '    　0507-1370-3497 <br />',
 	    '</div>'
 					
     ].join('');
