--- a/2.html
+++ b/2.html
@@ -1,53 +1,22 @@
 <!doctype html>
 <html>
 <head>
-  <title> (((((검색창 들어갈곳))))</title>
-  <meta charset="utf-8">
+	<meta charset="utf-8"/>
+	<title>Kakao 지도 시작하기</title>
 </head>
 <body>
-  <h1><a href="index.html"> 검색결과 :  재활센터 찾기 (고양시)</a></h1>
- 
-  
- <!-- 마커 -->
+	
+ <div id="map" style="width:500px;height:400px;"></div>
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1048191b0a1823550e187559dc64c962"></script>
+	<script>
+		var container = document.getElementById('map');
+		var options = {
+			center: new kakao.maps.LatLng(33.450701, 126.570667),
+			level: 3
+		};
 
-<script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=qqhkqo4hr7"></script>
-<div id="map" style="width:100%;height:450px;"></div>
-<script>
-
-var HOME_PATH = window.HOME_PATH || '.';
-var cityhall = new naver.maps.LatLng(37.630497, 126.832035),
-    map = new naver.maps.Map('map', {
-        center: cityhall.destinationPoint(0, 500),
-        zoom: 18
-    }),
-    marker = new naver.maps.Marker({
-        map: map,
-        position: cityhall
-    });
-
-var contentString = [
-        '<div class="iw_inner">',
-        '   <h3>　박재현재활운동센터 고양점</h3>',
-        '   <p>　경기 고양시 덕양구 화신로 263 브릿지타워 6층　<br />',
-        '    　0507-1370-3497 <br />',
-	    '</div>'
-					
-    ].join('');
-
-var infowindow = new naver.maps.InfoWindow({
-    content: contentString
-});
-
-naver.maps.Event.addListener(marker, "click", function(e) {
-    if (infowindow.getMap()) {
-        infowindow.close();
-    } else {
-        infowindow.open(map, marker);
-    }
-});
-
-infowindow.open(map, marker);
-</script>
+		var map = new kakao.maps.Map(container, options);
+	</script>
   
   
   <p>고양시 전체(센터)</p>
