--- a/2.html
+++ b/2.html
@@ -50,7 +50,7 @@
         <div class="option">
             <div>
                 <form onsubmit="searchPlaces(); return false;">
-                    키워드 : <input type="text" value="이태원 맛집" id="keyword" size="15"> 
+                    키워드 : <input type="text" value="고양시 재활센터" id="keyword" size="15"> 
                     <button type="submit">검색하기</button> 
                 </form>
             </div>
@@ -61,7 +61,7 @@
     </div>
 </div>
 
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=발급받은 APP KEY를 사용하세요&libraries=services"></script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1048191b0a1823550e187559dc64c962"></script>
 <script>
 // 마커를 담을 배열입니다
 var markers = [];
@@ -282,7 +282,7 @@ function removeAllChildNods(el) {
 </script>
   
   <p>고양시 전체(센터)</p>
-  <p>검색 키워드 : 재활 센터, 재활, 센터</p>
+  <p>검색 키워드 : 고양시 재활센터</p>
  
   <ol>
 <li>박재현재활운동센터 고양점</li>
