--- a/2.html
+++ b/2.html
@@ -50,7 +50,7 @@
         <div class="option">
             <div>
                 <form onsubmit="searchPlaces(); return false;">
-                    키워드 : <input type="text" value="고양시 재활센터" id="keyword" size="15"> 
+                    키워드 : <input type="text" value="이태원 맛집" id="keyword" size="15"> 
                     <button type="submit">검색하기</button> 
                 </form>
             </div>
@@ -280,31 +280,5 @@ function removeAllChildNods(el) {
     }
 }
 </script>
-  
-  <p>고양시 전체(센터)</p>
-  <p>검색 키워드 : 고양시 재활센터</p>
- 
-  <ol>
-<li>박재현재활운동센터 고양점</li>
-<li>바로잡기체형센터</li>
-<li>포올 운동 발달센터 & 행복한 검도(아동)</li>
-<li>위드아동발달센터(아동)</li>
-<li>참잘크는아이들 원흥점(아동)</li>
-<li>고양시재활스포츠센터</li>
-<li>연세재활운동센터</li>
-<li>이주능재활운동센터(필라테스? 뇌졸중?)</li>
-<li>수케어재활센터</li>
-<li>뉴힐링라이프재활운동센터 일산점</li>
-<li>해봄발달센터(아동)</li>
-<li>늘푸른수중운동센터(장애인)</li>
-<li>한국스포츠건강증진센터</li>
-<li>네오짐발달센터(아동)</li>
-<li>고양체형교정원(미용쪽이긴한데 애매)</li>
-<li>킴스체형교정센터</li>
-<li>관절치유 체형교정</li>
-<li>약손체형교정(애매하네)</li>
-<li>KDI스포츠클리닉</li>
-</ol>
-  
 </body>
 </html>
