--- a/2.html
+++ b/2.html
@@ -7,32 +7,74 @@
 <body>
 	<div id="map" style="width:750px;height:350px;"></div>
 
-	<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1048191b0a1823550e187559dc64c962"></script>
+	<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=발급받은 APP KEY를 사용하세요"></script>
 	<script>
 		var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
 		    mapOption = {
-		        center: new kakao.maps.LatLng(37.56611, 126.96917), // 지도의 중심좌표
-		        level: 6, // 지도의 확대 레벨
+		        center: new kakao.maps.LatLng(37.56682, 126.97865), // 지도의 중심좌표
+		        level: 3, // 지도의 확대 레벨
 		        mapTypeId : kakao.maps.MapTypeId.ROADMAP // 지도종류
 		    }; 
 
 		// 지도를 생성한다 
 		var map = new kakao.maps.Map(mapContainer, mapOption); 
 
+		// 마우스 드래그와 모바일 터치를 이용한 지도 이동을 막는다
+		map.setDraggable(false);		
+
+		// 마우스 휠과 모바일 터치를 이용한 지도 확대, 축소를 막는다
+		map.setZoomable(false);   
+
 		// 지도에 마커를 생성하고 표시한다
 		var marker = new kakao.maps.Marker({
-		    position: new kakao.maps.LatLng(37.56170, 126.96840), // 마커의 좌표
-		    draggable : true, // 마커를 드래그 가능하도록 설정한다
+		    position: new kakao.maps.LatLng(31.56682, 126.97865), // 마커의 좌표
 		    map: map // 마커를 표시할 지도 객체
 		});
-
-		// 마커 위에 표시할 인포윈도우를 생성한다
-		var infowindow = new kakao.maps.InfoWindow({
-		    content : '<div style="padding:5px;">인포윈도우 :D</div>' // 인포윈도우에 표시할 내용
+		// 지도에 마커를 생성하고 표시한다
+		var marker = new kakao.maps.Marker({
+		    position: new kakao.maps.LatLng(32.56682, 126.97865), // 마커의 좌표
+		    map: map // 마커를 표시할 지도 객체
 		});
-
-		// 인포윈도우를 지도에 표시한다
-		infowindow.open(map, marker);
+		// 지도에 마커를 생성하고 표시한다
+		var marker = new kakao.maps.Marker({
+		    position: new kakao.maps.LatLng(33.56682, 126.97865), // 마커의 좌표
+		    map: map // 마커를 표시할 지도 객체
+		});
+		// 지도에 마커를 생성하고 표시한다
+		var marker = new kakao.maps.Marker({
+		    position: new kakao.maps.LatLng(34.56682, 126.97865), // 마커의 좌표
+		    map: map // 마커를 표시할 지도 객체
+		});
+		// 지도에 마커를 생성하고 표시한다
+		var marker = new kakao.maps.Marker({
+		    position: new kakao.maps.LatLng(35.56682, 126.97865), // 마커의 좌표
+		    map: map // 마커를 표시할 지도 객체
+		});
+		// 지도에 마커를 생성하고 표시한다
+		var marker = new kakao.maps.Marker({
+		    position: new kakao.maps.LatLng(36.56682, 126.97865), // 마커의 좌표
+		    map: map // 마커를 표시할 지도 객체
+		});
+		// 지도에 마커를 생성하고 표시한다
+		var marker = new kakao.maps.Marker({
+		    position: new kakao.maps.LatLng(37.56682, 126.97865), // 마커의 좌표
+		    map: map // 마커를 표시할 지도 객체
+		});
+		// 지도에 마커를 생성하고 표시한다
+		var marker = new kakao.maps.Marker({
+		    position: new kakao.maps.LatLng(38.56682, 126.97865), // 마커의 좌표
+		    map: map // 마커를 표시할 지도 객체
+		});
+		// 지도에 마커를 생성하고 표시한다
+		var marker = new kakao.maps.Marker({
+		    position: new kakao.maps.LatLng(39.56682, 126.97865), // 마커의 좌표
+		    map: map // 마커를 표시할 지도 객체
+		});
+		// 지도에 마커를 생성하고 표시한다
+		var marker = new kakao.maps.Marker({
+		    position: new kakao.maps.LatLng(40.56682, 126.97865), // 마커의 좌표
+		    map: map // 마커를 표시할 지도 객체
+		});
 
 	</script>
 </body>
