--- a/2.html
+++ b/2.html
@@ -7,7 +7,7 @@
 <body>
 	<div id="map" style="width:750px;height:350px;"></div>
 
-	<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=발급받은 APP KEY를 사용하세요"></script>
+	<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1048191b0a1823550e187559dc64c962"></script>
 	<script>
 		var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
 		    mapOption = {
