--- a/2.html
+++ b/2.html
@@ -2,10 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>여러개 마커 표시하기</title>
+    <title>고양시 </title>
     
 </head>
 <body>
+	<h1> 고양시 재활센터 </h1>
+	
 <div id="map" style="width:100%;height:350px;"></div>
 
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1048191b0a1823550e187559dc64c962"></script>
